Drawing around no longer highlights text and other elements https://stackoverflow.com/questions/5429827/how-can-i-prevent-text-element-selection-with-cursor-drag

--- a/src/assets/scss/core/_normalize.scss
+++ b/src/assets/scss/core/_normalize.scss
@@ -1,3 +1,7 @@
+*{
+  user-select: none;
+}
+
 html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
